@@ -1,17 +1,0 @@
-
-//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-//																																//
-// 		                 		Property of Bytes Crafter : Website - "www.bytes-crafter.com"    								//
-// 		                 		This script is subjected to Copyrights Law. All rights Reserved. 								//
-// 		                   		Project Involved: USocketNet v1.0.0 Server  for Unity of 2018.  								//
-//																																//
-//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-
-
-//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-//																																//
-// 		                 		Property of Bytes Crafter : Website - "www.bytes-crafter.com"    								//
-// 		                 		This script is subjected to Copyrights Law. All rights Reserved. 								//
-// 		                   		Project Involved: USocketNet v1.0.0 Server  for Unity of 2018.  								//
-//																																//
-//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
